# bizdurr

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: test_business_duration.py  test_business_hours.py  test_business_hours_overrides.py
